fix: footer color in dark mode (#85)

--- a/docs/assets/css/extra.css
+++ b/docs/assets/css/extra.css
@@ -76,3 +76,7 @@
 .md-copyright {
     padding: 0 !important;
 }
+
+[data-md-color-scheme="slate"] .md-footer-meta {
+    background-color: #141518;
+}
